linux (3.10~rc7-1~exp2) UNRELEASED; urgency=low

  * cassini: Make missing firmware non-fatal (Closes: #714128)
  * debian/patches: Add DEP-5 headers (From, Subject, Forwarded/Origin)
    for most patches
  * aufs: Add DEP-5 headers to generated/copied patches

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100

linux (3.10~rc7-1~exp1) experimental; urgency=low

  * New upstream release candidate

  [ Ben Hutchings ]
  * [armhf/armmp] Add EMAC ethernet driver found on Allwinner A10 SoCs,
    thanks to Niall Walsh (Closes: #711998)
    - Add MDIO bus driver for the Allwinner EMAC
    - Add EMAC controller node to sun4i DTSI
    - cubieboard: Enable ethernet (EMAC) support in dts
    - Add EMAC Controller to Hackberry dt
  * [x86] cpufreq: Enable X86_INTEL_PSTATE (Closes: #712062)
  * debian/control: Add Homepage field
  * debian/watch: Add watch file and update script
  * misc/bmp085: Enable building as a module
  * misc: Enable BMP085_I2C as module
  * team: Enable NET_TEAM_MODE_RANDOM as module
  * 8021q: Enable VLAN_8021Q_MVRP
  * batman: Enable BATMAN_ADV_NC
  * netlink: Enable NETLINK_MMAP, NETLINK_DIAG [!armel/{iop32x,ixp4xx,orion5x}]
  * sctp: Enable SCTP_COOKIE_HMAC_SHA1
  * tipc: Enable TIPC_MEDIA_IB
  * [x86] cpufreq: Enable X86_AMD_FREQ_SENSITIVITY as module
  * [x86] i2c: Enable I2C_ISMT, I2C_DESIGNWARE_PCI as modules
  * [x86] mouse: Enable MOUSE_CYAPA as modules
  * [armel/{iop32x,ixp4xx,orion5x}] Disable features to reduce kernel size
    - Disable KSM, YAMA
    - [armel/orion5x] Disable FTRACE

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 24 Jun 2013 14:55:23 +0100

linux (3.10~rc5-1~exp1) experimental; urgency=low

  * New upstream release candidate

  [ Ben Hutchings ]
  * [x86] Enable HYPERVISOR_GUEST
  * udeb: Clean up configuration:
    - Move i2c-algo-bit to i2c-modules
    - Remove redundant control file overrides
    - [s390] Use symlinks to follow s390x configuration